@startuml "data architecture"
skinparam linetype ortho

entity Type {
    *id : int <<PK,generated>>
    ..
}

entity Port {
    *id : int <<PK,generated>>
    ..
    *plane : plane
    ..
    *type_id : int <<FK>>
    ..
    ...
}

entity Piece{
    *id : int <<PK,generated>>
    ..
    *type_id : int <<FK>>
    ..
    root_plane : plane
    ..
    ...
}

entity Attraction {
    *attracting_piece_id : int <<PK,FK>>
    *attracting_piece_type_port_id : int <<FK>>
    ..
    *attracted_piece_id : int <<PK,FK>>
    *attracted_piece_type_port_id : int <<FK>>
    ..
    ...
}

Type ||--|{ Port
Type <-- Piece
Piece <-- Attraction
Port <-- Attraction

@enduml